# straight_to_the_kitchen_sink

./: .cruft.json  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
search/: search_index.json
src/straight_to_the_kitchen_sink/: __init__.py  straight_to_the_kitchen_sink.py
tests/: __init__.py  test_straight_to_the_kitchen_sink.py
