[project]
name = "straight_to_the_kitchen_sink"
version = "0.1.0"
description = "WOW!! Lot of water! Such plates! Very cutlery!"
readme = "README.md"
authors = [
    {name = "Dishes Doge", email = "doge@sink.kitchen"},
]
requires-python = ">=3.12"
dependencies = []
classifiers = [
  # License
  "License :: OSI Approved :: MIT License",

  # Python versions supported by the package
  "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = [
  # indentation-with-invalid-multiple
  "E111",
  #indentation-with-invalid-multiple-comment
  "E114",
  # over-indented
  "E117",
]
